--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -6,7 +6,7 @@
 <% header_links << ["Apply", apply_path] %>
 
 <header>
-  <section class="header__container">
+  <section class="header__container center">
     <div class="menu-btn">
       <i class="fa fa-bars fa-2x"></i>
     </div>
