--- a/app/assets/stylesheets/global/global.scss
+++ b/app/assets/stylesheets/global/global.scss
@@ -48,7 +48,11 @@ h1 {
 }
 
 .display-left-container {
-    background-color: rgba(167, 148, 121, 0.8);
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a79479+0,a79479+100&0.85+0,1+25,1+100 */
+    background: -moz-linear-gradient(top, rgba(167,148,121,0.85) 0%, rgba(167,148,121,1) 40%, rgba(167,148,121,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(167,148,121,0.85) 0%,rgba(167,148,121,1) 40%,rgba(167,148,121,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(167,148,121,0.85) 0%,rgba(167,148,121,1) 40%,rgba(167,148,121,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9a79479', endColorstr='#a79479',GradientType=0 ); /* IE6-9 */
     position: relative;
 
     h1, p {
