Button font size larger

--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -19,7 +19,7 @@
 			<%= text_area_tag(:note, "", placeholder: "Tell us about yourself", class: "pwn-font") %>
 		</div>
 		<div class="pure-u-1 apply__submit">
-			<%= submit_tag("Submit", class: "pure-button pwn-button") %>
+			<%= submit_tag("Submit", class: "pure-button pwn-button", style: "font-size: 1.618em;") %>
 		</div>
 	</div>
 <% end %>
