--- a/app/assets/stylesheets/global/aside.scss
+++ b/app/assets/stylesheets/global/aside.scss
@@ -13,6 +13,10 @@
 	font-family: "Tangerine", cursive;
 	font-size: 2em;
     }
+
+    ul {
+    	padding-left: 60px;
+    }
 }
 
 .discord__container {
