--- a/app/views/global/_aside.html.erb
+++ b/app/views/global/_aside.html.erb
@@ -1,9 +1,19 @@
 <section class="aside">
 
-  <section class="aside__section resources__container">
-    <h3 class="blue">Resources</h3>
-    <p style="text-align: center">Nothing here for now...</p>
-  </section>
+  <% if logged_in? %>
+    <section class="aside__section resources__container">
+      <h3 class="blue" style="padding-top:1em;">Resources</h3>
+      <ul>
+        <li><%= link_to "GW2 Boss Timer", "http://www.gw2timer.com/", class: "pwn-font", target: "_blank" %></li>
+        <li><%= link_to "GW2 User Manual", "https://manual.guildwars2.com/en", class: "pwn-font", target: "_blank" %></li>
+        <li><%= link_to "GW2 Combat", "https://whyigame.wordpress.com/the-beginners-guide-to-movement-in-combat-guild-wars-2/", class: "pwn-font", target: "_blank"  %></li>
+        <li><%= link_to "GW2 Craft Power Leveling", "http://gw2crafts.net/", class: "pwn-font", target: "_blank" %></li>
+        <li><%= link_to "GW2 Craft Gold", "https://www.gw2spidy.com/", class: "pwn-font", target: "_blank" %></li>
+        <li><%= link_to "GW2 Trading Post", "https://www.gw2bltc.com/", class: "pwn-font", target: "_blank" %></li>
+        <li><%= link_to "GW2 Dungeons", "http://gw2dungeons.net/", class: "pwn-font", target: "_blank" %></li>
+      </ul>
+    </section>
+  <% end %>
   
   <section class="aside__section discord__container">
     <h3 class="blue">Who's Online?</h3>
