Set Some Custom Titles

--- a/app/views/announcements/show.html.erb
+++ b/app/views/announcements/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :page_title do %>
+	<title><%= @announcement.title %> - Announcement | Casual Pwnography - Guild Wars 2</title>
+<% end %>
+
 <article class="blog-post">
 	<h2 class="blog-title blue classy">
 		<%= @announcement.title %><br>
