--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
+<% content_for :page_title do %> 
+	<title>Casual Pwnography - Guild Wars 2</title>
+<% end %>
+
 <h1 class="blue classy wall-header">The Wall<br><span class="not-fancy">What're you up to?</span></h1>
 <hr>
 <% if logged_in?  %>
