--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,8 @@
+<% content_for :page_title do %>
+	<title><%= @post.title %> - Announcement | Casual Pwnography - Guild Wars 2</title>
+<% end %>
+
+
 <% unless @post.guild_only && !logged_in? %>
 	<article class="blog-post">
 		<h2 class="blog-title blue classy">
