--- a/app/assets/stylesheets/global/blog-post.scss
+++ b/app/assets/stylesheets/global/blog-post.scss
@@ -20,5 +20,14 @@
 	div {
 		border: 2px solid #195584;
 		padding: 0.5em;
+
+		&.share-social-media,
+		&.share-social-media div {
+			border: 0;
+		}
+
+		&.share-socia-media div {
+			padding: 0;
+		}
 	}
 }
