Style share buttons

--- a/app/assets/stylesheets/global/blog-post.scss
+++ b/app/assets/stylesheets/global/blog-post.scss
@@ -24,10 +24,14 @@
 		&.share-social-media,
 		&.share-social-media div {
 			border: 0;
-		}
 
-		&.share-socia-media div {
-			padding: 0;
+			a {
+				margin: 0em 1em;
+
+				&:last-child {
+					margin-right: 0em;
+				}
+			}
 		}
 	}
 }
