Add custom Page titles

--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -1,3 +1,7 @@
+<% content_for :page_title do %>
+	<title>Apply to join! | Casual Pwnography - Guild Wars 2</title>
+<% end %>
+
 <h1 class="blue classy wall-header">Apply to the guild!<br><br><span class="not-fancy">Fill out the fields below!</span></h1>
 <hr>
 <%= form_tag("/apply", method: :post, class: "pure-form pure-form-stacked") do %>
