--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :page_title do %>
+	<title>New Wall Post | Casual Pwnography - Guild Wars 2</title>
+<% end %>
+
 <%= form_for(@post) do |f| %>
 	<fieldset>
 		<legend class="blue classy">Post Information</legend>
