--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-	<title><%= @post.title %> - Announcement | Casual Pwnography - Guild Wars 2</title>
+	<title><%= @post.title %> - Wall Post | Casual Pwnography - Guild Wars 2</title>
 <% end %>
 
 
