--- a/app/views/users/password_form.html.erb
+++ b/app/views/users/password_form.html.erb
@@ -1,3 +1,7 @@
+<% content_for :page_title do %>
+  <title>Change Password Form | Casual Pwnography - Guild Wars 2</title>
+<% end %>
+
 <div class="user-registration-form">
   <%= form_tag("#{password_path}/#{@this_user.id}", method: :patch, class: "pure-form pure-form-stacked") do%>
     <fieldset>
