Add Donation button

--- a/app/assets/stylesheets/global/aside.scss
+++ b/app/assets/stylesheets/global/aside.scss
@@ -30,3 +30,10 @@
 	height: 87%;
     }
 }
+
+.donation__container {
+    input[name='submit'] {
+        display: block;
+        margin: 0 auto;
+    }
+}
