replace About with sidebar

--- a/app/views/global/_aside.html.erb
+++ b/app/views/global/_aside.html.erb
@@ -13,6 +13,13 @@
         <li><%= link_to "GW2 Dungeons", "http://gw2dungeons.net/", class: "pwn-font", target: "_blank" %></li>
       </ul>
     </section>
+  <% else %>
+    <section class="aside__section resources__container">
+      <h3 class="blue" style="padding-top:1em;">About</h3>
+      <p class="pwn-font" style="text-align:center;padding:0em 1em;">
+        Casual Pwnography is a guild in Guild wars 2, Devona's Rest. We are an English speaking guild who play casually. 
+      </p>
+    </section>
   <% end %>
   
   <section class="aside__section discord__container">
