Fix some styling + TimeZone

--- a/app/assets/stylesheets/global/announcements.scss
+++ b/app/assets/stylesheets/global/announcements.scss
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
     margin: 0 auto;
     padding: 0.125em;
-    background-color: $casual-gold;
+    background-color: rgba(167, 148, 121, 0.85);
 }
 
 .announcement__container h2 {
