--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,10 +10,10 @@
 	<% end %>
 <% end %>
 <% if Post.all.empty? %>
-	<article>
+	<article style="min-height: 30em">
 	  <h2 style="text-align: center" class="blue pwn-font">Hm, nothing here</h2>
 	  <p style="text-align: center">
-	  	Looks like no one has had the chance to post anything yet.
+	  	<em>Looks like no one has had the chance to post anything yet.</em>
 	  </p>
 	</article>	
 <% else %>
