--- a/app/assets/stylesheets/global/global.scss
+++ b/app/assets/stylesheets/global/global.scss
@@ -23,6 +23,7 @@ body {
 .classy {
     font-family: "Tangerine", cursive;
     font-size: 2em;
+    text-shadow: 1px 1px 8px #606060;
 }
 
 .blue {
