--- a/app/assets/stylesheets/global/announcements.scss
+++ b/app/assets/stylesheets/global/announcements.scss
@@ -2,7 +2,15 @@
 	box-sizing: border-box;
     margin: 0 auto;
     padding: 0.125em;
-    background-color: rgba(167, 148, 121, 0.85);
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a79479+0,ccb594+0,f2d6b0+3,8c7c66+100,a79479+100 */
+	background: rgb(167,148,121); /* Old browsers */
+	background: -moz-linear-gradient(top, rgba(167,148,121,1) 0%, rgba(204,181,148,1) 0%, rgba(242,214,176,1) 3%, rgba(140,124,102,1) 100%, rgba(167,148,121,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, rgba(167,148,121,1) 0%,rgba(204,181,148,1) 0%,rgba(242,214,176,1) 3%,rgba(140,124,102,1) 100%,rgba(167,148,121,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, rgba(167,148,121,1) 0%,rgba(204,181,148,1) 0%,rgba(242,214,176,1) 3%,rgba(140,124,102,1) 100%,rgba(167,148,121,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a79479', endColorstr='#a79479',GradientType=0 ); /* IE6-9 */
+    a {
+    	color: lighten($casual-blue, 10%);
+    }
 }
 
 .announcement__container h2 {
