--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -33,7 +33,7 @@
 		  	<% sign_in_text = "Sign In" %>
 		  	<% sign_in_text = "Account" if logged_in? %>
 
-		    <li><%= link_to sign_in_text, "#", class: "pure-button signin-button" %></li>
+		    <li><%= link_to sign_in_text, "javascript:void();", class: "pure-button signin-button" %></li>
 		    <% header_links.reverse.each do |array| %>
 		      <li><%= link_to array[0], array[1], class: "gold" %></li>
 		    <% end %>
@@ -44,7 +44,7 @@
 		  	<% sign_in_text = "Sign In" %>
 		  	<% sign_in_text = "Account" if logged_in? %>
 
-		    <li><%= link_to sign_in_text, "#", class: "pure-button signin-button" %></li>
+		    <li><%= link_to sign_in_text, "javascript:void()", class: "pure-button signin-button" %></li>
 		    <% header_links.reverse.each do |array| %>
 		      <li><%= link_to array[0], array[1], class: "gold" %></li>
 		    <% end %>
