Point header to guild events index

--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -1,7 +1,7 @@
 <% header_links = [] %>
 
 <% header_links << ["Home", root_path] %>
-<% header_links << ["Events/LFG", "#"] %>
+<% header_links << ["Events/LFG", guild_events_path] %>
 <% header_links << ["Apply", apply_path] %>
 
 <header>
