Program the date picker

--- a/app/views/guild_events/new.html.erb
+++ b/app/views/guild_events/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Guild Event</h1>
+<h1 class="classy blue wall-header">New Guild Event</h1>
 
 <%= render 'form', guild_event: @guild_event %>
 
