--- a/app/views/guild_events/_form.html.erb
+++ b/app/views/guild_events/_form.html.erb
@@ -1,12 +1,3 @@
-<%= javascript_include_tag "#{root_url}pick/lib/picker.js" %>
-<%= javascript_include_tag "#{root_url}pick/lib/picker.date.js" %>
-<%= javascript_include_tag "#{root_url}pick/lib/picker.time.js" %>
-
-<%= stylesheet_link_tag "#{root_url}pick/css/default.css" %>
-<%= stylesheet_link_tag "#{root_url}pick/css/default.date.css" %>
-<%= stylesheet_link_tag "#{root_url}pick/css/default.time.css" %>
-
-
 <%= form_with(model: guild_event, local: true) do |form| %>
   <% if guild_event.errors.any? %>
     <div id="error_explanation">
@@ -22,12 +13,14 @@
 
   <div class="field">
     <%= form.label :start_time %>
-    <%= form.text_field :start_time, id: :guild_event_start_time %>
+    <%= form.text_field :start_time_date, id: :guild_event_start_time_date %>
+    <%= form.text_field :start_time_time, id: :guild_event_start_time_time %>
   </div>
 
   <div class="field">
     <%= form.label :end_time %>
-    <%= form.datetime_select :end_time, id: :guild_event_end_time %>
+    <%= form.text_field :end_time_date, id: :guild_event_end_time_date %>
+    <%= form.text_field :end_time_time, id: :guild_event_end_time_time %>
   </div>
 
   <div class="field">
@@ -61,5 +54,8 @@
 <% end %>
 
 <script type="text/javascript">
-  $("#guild_event_start_time").pickadate();
+  $("#guild_event_start_time_date").pickadate();
+  $("#guild_event_start_time_time").pickatime();
+  $("#guild_event_end_time_date").pickadate();
+  $("#guild_event_end_time_time").pickatime();
 </script>
