Add New Event Title

--- a/app/views/guild_events/new.html.erb
+++ b/app/views/guild_events/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :page_title do %>
+	<title>New Guild Event | Casual Pwnography - Guild Wars 2</title>
+<% end %>
+
 <h1 class="classy blue wall-header">New Guild Event</h1>
 
 <%= render 'form', guild_event: @guild_event %>
