--- a/app/views/guild_events/index.html.erb
+++ b/app/views/guild_events/index.html.erb
@@ -3,50 +3,54 @@
 <% end %>
 
 <h1 class="classy blue wall-header">Upcoming Guild Events</h1>
-
-<%= link_to 'New Guild Event', new_guild_event_path, class: "pure-button pwn-button" %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Start time</th>
-      <th>End time</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Category</th>
-      <th>Guild only</th>
-      <th>Roster size</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @guild_events.each do |guild_event| %>
-      <tr>
-        <td><%= guild_event.start_time %></td>
-        <td><%= guild_event.end_time %></td>
-        <td><%= guild_event.title %></td>
-        <td><%= guild_event.description %></td>
-        <td><%= guild_event.category %></td>
-        <td><%= guild_event.guild_only %></td>
-        <td><%= guild_event.roster_size %></td>
-        <td><%= link_to 'Show', guild_event %></td>
-        <td><%= link_to 'Edit', edit_guild_event_path(guild_event) %></td>
-        <td><%= link_to 'Destroy', guild_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-
-<%= month_calendar events: @guild_events do |date, g_events| %>
-  <%= date %>
-
-  <% g_events.each do |g_event| %>
-    <div>    
-      <%= link_to g_event.title, g_event, class: 'pwn-font' %>
-    </div>
-  <% end %>
+<% if logged_in? %>
+  <%= link_to 'New Guild Event', new_guild_event_path, class: "pure-button pwn-button" %>
 <% end %>
 
-<br>
+<div style="padding: 1em">
+  <table>
+    <thead>
+      <tr>
+        <th>Start time</th>
+        <th>End time</th>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Category</th>
+        <th>Guild only</th>
+        <th>Roster size</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @guild_events.each do |guild_event| %>
+        <tr>
+          <td><%= guild_event.start_time %></td>
+          <td><%= guild_event.end_time %></td>
+          <td><%= guild_event.title %></td>
+          <td><%= guild_event.description %></td>
+          <td><%= guild_event.category %></td>
+          <td><%= guild_event.guild_only %></td>
+          <td><%= guild_event.roster_size %></td>
+          <td><%= link_to 'Show', guild_event %></td>
+          <td><%= link_to 'Edit', edit_guild_event_path(guild_event) %></td>
+          <td><%= link_to 'Destroy', guild_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+
+  <%= month_calendar events: @guild_events do |date, g_events| %>
+    <%= date %>
+
+    <% g_events.each do |g_event| %>
+      <div>    
+        <%= link_to g_event.title, g_event, class: 'pwn-font' %>
+      </div>
+    <% end %>
+  <% end %>
+
+  <br>
+</div>
+
