--- a/app/views/guild_events/index.html.erb
+++ b/app/views/guild_events/index.html.erb
@@ -2,13 +2,14 @@
   <title>Guild Events | Casual Pwnography - Guild Wars 2</title>
 <% end %>
 
-<h1 class="classy blue wall-header">Upcoming Guild Events</h1>
+<h1 class="classy blue wall-header">Guild Events</h1>
 <% if logged_in? %>
   <%= link_to 'New Guild Event', new_guild_event_path, class: "pure-button pwn-button" %>
 <% end %>
 
 <div style="padding: 1em">
-  <table>
+  <h2 class="classy">Ongoing Guild Events</h2>
+  <table class="pure-table pure-table-horizontal">
     <thead>
       <tr>
         <th>Start time</th>
