--- a/app/views/guild_events/index.html.erb
+++ b/app/views/guild_events/index.html.erb
@@ -8,38 +8,53 @@
 <% end %>
 
 <div style="padding: 1em">
-  <h2 class="classy">Ongoing Guild Events</h2>
-  <table class="pure-table pure-table-horizontal">
-    <thead>
-      <tr>
-        <th>Start time</th>
-        <th>End time</th>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Category</th>
-        <th>Guild only</th>
-        <th>Roster size</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @guild_events.each do |guild_event| %>
+  <% if @ongoing %>
+    <h2 class="classy">Ongoing Guild Events</h2>
+    <table class="pure-table pure-table-horizontal">
+      <thead>
         <tr>
-          <td><%= guild_event.start_time %></td>
-          <td><%= guild_event.end_time %></td>
-          <td><%= guild_event.title %></td>
-          <td><%= guild_event.description %></td>
-          <td><%= guild_event.category %></td>
-          <td><%= guild_event.guild_only %></td>
-          <td><%= guild_event.roster_size %></td>
-          <td><%= link_to 'Show', guild_event %></td>
-          <td><%= link_to 'Edit', edit_guild_event_path(guild_event) %></td>
-          <td><%= link_to 'Destroy', guild_event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <th>Title</th>
+          <th>Time Remaining</th>
+          <th>Category</th>
+          <th>Spaces Available</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
+
+      <tbody>
+        <% @ongoing.each do |guild_event| %>
+          <tr>
+            <td><%= link_to guild_event.title, guild_event %></td>
+            <td>Event ending in <%= distance_of_time_in_words(Time.zone.now, guild_event.end_time)  %></td>
+            <td><%= guild_event.category %></td>
+            <td><%= guild_event.roster_size %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% end %>
+
+  <h2 class="classy">Upcoming Guild Events</h2>
+    <table class="pure-table pure-table-horizontal">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Start Time</th>
+          <th>Category</th>
+          <th>Spaces Available</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @upcoming.each do |guild_event| %>
+          <tr>
+            <td><%= link_to guild_event.title, guild_event %></td>
+            <td>Event beginning in <%= distance_of_time_in_words(Time.zone.now, guild_event.start_time)  %></td>
+            <td><%= guild_event.category %></td>
+            <td><%= guild_event.roster_size %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
 
   <%= month_calendar events: @guild_events do |date, g_events| %>
