Style the new Form

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,5 +7,6 @@
 @import "home.scss";
 @import "posts.scss";
 @import "apply.scss";
+@import "guild_events.scss";
 
 @import "registration-forms.scss";
