--- a/app/assets/stylesheets/guild_events.scss
+++ b/app/assets/stylesheets/guild_events.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the GuildEvents controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.guild_event_data {
+	input, select {	
+		display: block;
+		width: 95%;
+		border-radius: 0;
+		margin: 0 auto;
+		text-align: center;
+	}
+
+	label {
+		display:block;
+		text-align: center;
+		text-decoration: underline;
+		margin-top: .5em;
+	}
+}
+
+.text_area_field {
+	textarea {
+		width: 95%;
+		margin: 0 auto;
+		display: block;
+	}
+}
