--- a/app/views/guild_events/_form.html.erb
+++ b/app/views/guild_events/_form.html.erb
@@ -14,50 +14,53 @@
   <% end %>
 
   <fieldset>
-    <legend>Event Information</legend>
+    <legend class="pwn-font">Event Information</legend>
 
-    <div class="pure-g">    
+    <div class="pure-g guild_event_data">    
       <div class="field pure-u-1">
-        <%= form.label :title %><br>
+        <%= form.label :title, "Title", class: "classy blue" %>
 
-        <%= form.text_field :title, id: :guild_event_title %>
+        <%= form.text_field :title, id: :guild_event_title, required: true, class: 'pwn-font' %>
       </div>
 
       <div class="field pure-u-1-2">
-        <%= form.label :start_time %><br>
+        <%= form.label :start_time, "Start", class: "classy blue" %>
 
         <%= form.text_field :start_time_date, id: :guild_event_start_time_date, required: true %>
         <%= form.text_field :start_time_time, id: :guild_event_start_time_time, required: true %>
       </div>
 
       <div class="field pure-u-1-2">
-        <%= form.label :end_time %><br>
+        <%= form.label :end_time, "End", class: "classy blue" %>
         <%= form.text_field :end_time_date, id: :guild_event_end_time_date, required: true %>
         <%= form.text_field :end_time_time, id: :guild_event_end_time_time, required: true %>
       </div>
 
-      <div class="field pure-u-1-2">
-        <%= form.label :category %><br>
+      <div class="field pure-u-1-3">
+        <%= form.label :category, "Category", class: "classy blue" %>
         <%= form.select :category, options_for_select(@categories), id: :guild_event_category %>
       </div>
 
-      <div class="field pure-u-1-2">
-        <%= form.label :roster_size %><br>
+      <div class="field pure-u-1-3">
+        <%= form.label :roster_size, "Roster Size", class: "classy blue" %>
         <%= form.number_field :roster_size, id: :guild_event_roster_size %>
       </div>
 
-      <div class="field pure-u-1-2">
-        <%= form.label :guild_only %>
+      <div class="field pure-u-1-3">
+        <%= form.label :guild_only, "Guild Only?", class: 'classy blue' %>
         <%= form.check_box :guild_only, id: :guild_event_guild_only %>
       </div>
     </div>
   </fieldset>
 
+  <fieldset>
+    <legend class="classy blue">Event Description</legend>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :guild_event_description %>
-  </div>
+    <div class="field editor-container">
+      <%= form.text_area :description, id: :guild_event_description %>
+    </div>
+  </fieldset>
+
 
   <div class="actions">
     <%= form.submit "Submit Guild Event", class: 'pure-button pwn-button' %>
