Apply Styling to Guild Events

--- a/app/assets/stylesheets/guild_events.scss
+++ b/app/assets/stylesheets/guild_events.scss
@@ -26,3 +26,14 @@
 		display: block;
 	}
 }
+
+.actions {
+	text-align: center;
+	margin-top: 1em;
+	font-size: 1.618em;
+}
+
+.back-button{
+	text-align: center;
+	margin: 1em 0em;
+}
