--- a/app/views/guild_events/new.html.erb
+++ b/app/views/guild_events/new.html.erb
@@ -5,5 +5,6 @@
 <h1 class="classy blue wall-header">New Guild Event</h1>
 
 <%= render 'form', guild_event: @guild_event %>
-
-<%= link_to 'Back', guild_events_path %>
+<div class="back-button">
+	<%= link_to 'Back', guild_events_path %>	
+</div>
