--- a/app/views/guild_events/index.html.erb
+++ b/app/views/guild_events/index.html.erb
@@ -18,6 +18,9 @@
           <th>Time Remaining</th>
           <th>Category</th>
           <th>Spaces Available</th>
+          <% if logged_in? %>
+            <th>Action</th>
+          <% end %>
         </tr>
       </thead>
 
@@ -27,7 +30,7 @@
             <td><%= link_to guild_event.title, guild_event %></td>
             <td>Event ending in <%= distance_of_time_in_words(Time.zone.now, guild_event.end_time)  %></td>
             <td><%= guild_event.category %></td>
-            <td><%= guild_event.roster_size %></td>
+            <td><%= guild_event.spaces_available %></td>
           </tr>
         <% end %>
       </tbody>
@@ -43,6 +46,9 @@
           <th>Start Time</th>
           <th>Category</th>
           <th>Spaces Available</th>
+          <% if logged_in? %>
+            <th>Action</th>
+          <% end %>
         </tr>
       </thead>
 
@@ -52,7 +58,7 @@
             <td><%= link_to guild_event.title, guild_event %></td>
             <td>Event beginning in <%= distance_of_time_in_words(Time.zone.now, guild_event.start_time)  %></td>
             <td><%= guild_event.category %></td>
-            <td><%= guild_event.roster_size %></td>
+            <td><%= guild_event.spaces_available %></td>
           </tr>
         <% end %>
       </tbody>
