--- a/app/views/guild_events/_form.html.erb
+++ b/app/views/guild_events/_form.html.erb
@@ -44,7 +44,7 @@
       <div class="field pure-u-1-3">
         <%= form.label :roster_size, "Roster Size", class: "classy blue" %>
         <%= form.number_field :roster_size, id: :guild_event_roster_size, min: 0 %>
-        <span style="text-align: center;color:#484848;display:block;">0 for no limit</span>
+        <span style="text-align: center;color:#484848;display:block;">0 for no limit, This number includes you</span>
       </div>
 
       <div class="field pure-u-1-3">
