Show Pagination & Order ongoing events

--- a/app/assets/stylesheets/guild_events.scss
+++ b/app/assets/stylesheets/guild_events.scss
@@ -37,3 +37,11 @@
 	text-align: center;
 	margin: 1em 0em;
 }
+
+.do-not-hide-pagination {
+	.pagination {
+		opacity: 1;
+		text-align: center;
+		margin-top: 1em;
+	}
+}
