--- a/app/assets/stylesheets/global/aside.scss
+++ b/app/assets/stylesheets/global/aside.scss
@@ -1,7 +1,10 @@
 .aside__section {
+
+    padding-bottom: 2em;
+
     h3 {
 	margin: 0;
-    padding: 1em 0;
+    padding: 1em 0 0.6em 0;
 	text-align: center;
 	font-family: "Acme", sans-serif;
     }
