--- a/app/assets/stylesheets/guild_events.scss
+++ b/app/assets/stylesheets/guild_events.scss
@@ -45,3 +45,14 @@
 		margin-top: 1em;
 	}
 }
+
+.aside__event {
+	text-align: center;
+	margin: 1em auto;
+
+	color: #484848;
+	font-style: italic;
+	padding: 2em 0em;
+	width: 95%;
+	border: 0.125em solid $casual-blue;
+}
