--- a/app/assets/stylesheets/global/header.scss
+++ b/app/assets/stylesheets/global/header.scss
@@ -51,6 +51,12 @@
 
     nav {
 	margin-top: 1.75em;
+
+		&.mobile-nav {
+			ul {
+				padding: 0;
+			}
+		}
     }
     
     ul {
@@ -58,6 +64,7 @@
 	margin: 0;
 	padding: 0;
 	padding-right: 1em;
+	padding-bottom: 1em;
 	overflow: hidden;
     }
 
@@ -89,6 +96,19 @@
 }
 
 @media screen and (max-width: 35.5em) {
+
+	nav.mobile-nav ul.menu {
+		li a {
+			width: 61%;
+			margin: 0 auto;
+		}
+	}
+
+	.sign-in-container {
+		right: 0;
+		left: 0;
+		margin: auto;
+	}
 
     .menu-btn {
 	display: block;
