--- a/app/views/global/_aside.html.erb
+++ b/app/views/global/_aside.html.erb
@@ -5,6 +5,7 @@
     <ul>
       <li><%= link_to "GW2 Boss Timer", "http://www.gw2timer.com/", class: "pwn-font", target: "_blank" %></li>
       <li><%= link_to "GW2 User Manual", "https://manual.guildwars2.com/en", class: "pwn-font", target: "_blank" %></li>
+      <li><%= link_to "GW2 Class Guides", "https://metabattle.com/wiki/MetaBattle_Wiki", class: "pwn-font", target: "_blank" %></li>
       <li><%= link_to "GW2 Combat", "https://whyigame.wordpress.com/the-beginners-guide-to-movement-in-combat-guild-wars-2/", class: "pwn-font", target: "_blank"  %></li>
       <li><%= link_to "GW2 Craft Power Leveling", "http://gw2crafts.net/", class: "pwn-font", target: "_blank" %></li>
       <li><%= link_to "GW2 Craft Gold", "https://www.gw2spidy.com/", class: "pwn-font", target: "_blank" %></li>
